--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php" : ">=5.3.0"
-    },
-    "require": {
+        "php" : ">=5.3.0",
         "guzzlehttp/guzzle": "4.*"
     },
     "autoload": {
